feat: menu redisigned, benchmark added
